# NeuriScout

./: .env.example  .env.railway  .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GOOGLE_AUTH_SETUP.md  Procfile  README.md  build.sh  pyproject.toml  railway-init.sh  render.yaml  requirements.txt
backend/: __init__.py  ingest.py  main.py  rag.py
data/: neurips_2025_enriched_events.csv  neurips_2025_expo_events.csv
frontend/: .env.local.example  .env.production.example  package-lock.json  package.json
frontend/public/: debug-bookmarks.html  test-api.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/bookmarks/: page.tsx
frontend/src/app/components/: Autocomplete.tsx  BasketDrawer.tsx  ChatPanel.tsx  PaperCard.tsx  UserMenu.tsx
frontend/src/config/: allowedDomains.ts
frontend/src/contexts/: BookmarksContext.tsx
frontend/src/lib/: api.ts
scripts/: download_data_requests.py  enrich_events.py  merge_neurips.py  rescrape_expo_with_dates.sh  scrape_expo_events.py  scrape_neurips.py  scrape_neurips_selenium.py  scrape_papercopilot.py  verify_rag.py  verify_search.py
