[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuriscout"
version = "0.1.0"
description = "NeuriScout - Semantic search and LLM-powered insights for NeurIPS 2025 research papers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "chromadb",
    "sentence-transformers",
    "pandas",
    "beautifulsoup4",
    "pypdf",
    "httpx",
    "python-multipart",
    "python-dotenv",
    "openai",
    "google-generativeai",
]

[project.scripts]
neuriscout-backend = "backend.main:start_server"
neuriscout-ingest = "backend.ingest:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
